[package]
name = "creative-coding"
version = "0.1.0"
edition = "2021"
authors = ["Kacper \"Nyjako\" Tucholski"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shapes"
# Simple shapes to get used to lib

[[bin]]
name = "circle"
# Bouncing circle

[[bin]]
name = "circles"
# Multiple bouncing circles (just more complex one)
# if laggy run with "cargo run --bin circles --release"

[dependencies]
nannou = "0.18.1"
rand = "0.8.5"